mds: limit client writable range increment

For very large file, setting the writable range to '2 * file_size'
causes file recovery to run a long time. To recover a 1T file, Filer
needs to probe 2T~1T range.

Fixes: http://tracker.ceph.com/issues/19955
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit 538f35bef944b18e9bca2b15ed7f4e8807ef0554)

Conflicts:
        src/mds/Locker.h - in jewel, file_update_finish() has different
            arguments than it does in master